--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,9 @@
-#test
+services:
+- type: pserv
+  name: redis
+  env: docker
+  autoDeploy: false
+  disk:
+    name: data
+    mountPath: /var/lib/redis
+    sizeGB: 10
